Changelog
=========

1.1 (unreleased)
------------------

- Changed the description for setuptools metadata classifier [macagua]

- Added the license for setuptools metadata classifier [macagua]

- Changed the keywords for setuptools metadata classifier [macagua]

- Added more strings classifiers items for this packages [macagua]

- Updated manifest file for diazo theme adding preview file [macagua]

- Update information about this package [macagua]

1.0 (6-04-2012)
-------------------

- Initial release